--- a/stegano.cbp
+++ b/stegano.cbp
@@ -13,6 +13,7 @@
 				<Option compiler="gcc" />
 				<Compiler>
 					<Add option="-g" />
+					<Add directory="include" />
 				</Compiler>
 			</Target>
 			<Target title="Release">
@@ -22,6 +23,7 @@
 				<Option compiler="gcc" />
 				<Compiler>
 					<Add option="-O2" />
+					<Add directory="include" />
 				</Compiler>
 				<Linker>
 					<Add option="-s" />
@@ -32,7 +34,10 @@
 			<Add option="-Wall" />
 			<Add option="-fexceptions" />
 		</Compiler>
+		<Unit filename="header.h" />
+		<Unit filename="include/wavFile.h" />
 		<Unit filename="main.cpp" />
+		<Unit filename="src/wavFile.cpp" />
 		<Extensions>
 			<code_completion />
 			<envvars />
